# dron3

./: CMakeLists.txt  README.md  install_ros_and_gazebo.sh  package.xml  speectotextlegit.py
include/msgs_definitions/: setpoint_msg_attitude_defines.h
src/: attitude_control.cpp  main.cpp
